# autoImage2

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  config.toml
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md  sync.md  update.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/openspec-sync-specs/: SKILL.md
.claude/skills/openspec-update-change/: SKILL.md
.github/workflows/: build.yml
app/: Dockerfile
ghpages/: app.css  app.js  index.html
openspec/changes/deploy-frontend-github-pages/: design.md  proposal.md  tasks.md
openspec/changes/deploy-frontend-github-pages/specs/commit-history-diff/: spec.md
openspec/changes/deploy-frontend-github-pages/specs/dockerfile-contents-api/: spec.md
openspec/changes/deploy-frontend-github-pages/specs/dockerfile-editor/: spec.md
openspec/changes/deploy-frontend-github-pages/specs/gh-pages-static-host/: spec.md
openspec/changes/deploy-frontend-github-pages/specs/ghcr-pull-tar/: spec.md
openspec/changes/deploy-frontend-github-pages/specs/github-pat-auth/: spec.md
openspec/changes/deploy-frontend-github-pages/specs/workflow-build-trigger/: spec.md
openspec/changes/rust-stack-vvvv-image-builder/: design.md  proposal.md  tasks.md
src/: backup.rs  config.rs  error.rs  main.rs  state.rs
src/handlers/: backup.rs  build.rs  dockerfile.rs  git.rs  index.rs  mod.rs  proxy.rs  registry.rs
static/: app.css  app.js  index.html
(+6 files in other folders)
